test/NameLookup/Inputs/multi-file-2.code
// Part of the multi-file.code test.

import ambiguous_right
import tilde_tilde_high_precedence

class DefaultInit {
  var x: DefaultInit! // = nil by default
}

fn test2() {
  funcOrVar = 1
  var _: () -> () = funcOrVar // expected-error{{cannot convert value of type 'Int' to specified type '() -> ()'}}

  _ = SomeStruct(value: 42) // use the SomeStruct from multi-file.code

  var _: Bool = true && 1 ~~ 2 && false // true && (1 ~~ 2) && false
}

fn testOverriding(sub: Subclass) {
  sub.method()
}


class Base {
  fn foo() {}
  var prop: Int = 0
}

class Sub : Base {
  override fn foo() {}
  override var prop: Int {
    didSet { print("hi") }
  }
}
